# ukui-search

./: globalsearch.cpp  globalsearch.h  globalsearch.ui  main.cpp  searchtest.pro
debian/: changelog
src/AppSearch/: appmodel.cpp  appmodel.h  appsearch.pri  appview.cpp  appview.h  appwidget.cpp  appwidget.h  searchresultwidget.cpp
src/ControlCenterSettingsSearch/: settingmodel.cpp  settingview.cpp  settingview.h  settingwidget.cpp  settingwidget.h
src/ControlCenterSettingsSearch/assets/: search.conf  search.xml
src/FileSearch/: filemodel.cpp  fileview.cpp  fileview.h  searchfilewidget.cpp  searchfilewidget.h
src/Interface/: morebutton.cpp  morebutton.h  ukuimenuinterface.cpp  ukuimenuinterface.h
src/MainWindow/: main.cpp  mainviewwidget.cpp  mainviewwidget.h  mainwindow.cpp
src/SearchBar/: inputbox.cpp  inputbox.h
src/UtilityFunction/: itemdelegate.cpp
src/WebSearch/: websearch.cpp  websearch.h
src/declarative/: CMakeLists.txt
tests/: CMakeLists.txt  mainrunner.cpp  mainrunner.h  res.qrc  settingmodel.cpp  settingmodel.h
tests/assets/: search.conf  search.xml
translations/: ukui-search_tr.ts  ukui-search_zh_CN.ts
